objects/Deal_Grading_IP__c.object
<CustomObject>
    <fields>
        <fullName>DealGrading__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Grading</label>
        <referenceTo>Deal_Grading__c</referenceTo>
        <relationshipLabel>Deal Grading IPS</relationshipLabel>
        <relationshipName>Deal_Grading_IPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP Design Kit</label>
        <referenceTo>IP__c</referenceTo>
        <relationshipLabel>Deal Grading IPS</relationshipLabel>
        <relationshipName>Deal_Grading_IPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Menu_IP__c</fullName>
        <label>Non Menu IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deal Grading IP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DG-IP-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Deal Grading IP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Grading IPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>